[package]
name = "shoppyserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { version = "1.0", features = [ "backtrace" ] }
api-version        = { git = "https://github.com/scndcloud/api-version" }
axum               = { version = "0.7", features = [ "http2", "json" ] }
configured         = { version = "0.7" }
humantime-serde    = { version = "1.1" }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
time               = { version = "0.3", features = [ "formatting" ] }
tokio              = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower              = { version = "0.4" }
tower-http         = { version = "0.5", features = [ "trace" ] }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
